# rag-kubeflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  justfile  pyproject.toml
.claude/: settings.local.json
.claude/agents/: product-owner.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/create-subagent/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/github-issue-creator/: SKILL.md
course/: fiche-de-cours.md  mlflow.md  quickstart.md  session-1.md  session-2.md  session-3.md  setup-guide.md
course/slides/: session-1-slides.html  session-2-slides.html  session-3-slides.html
data/documents/: embedding-models.md  getting-started.txt  kubeflow-pipelines.md  kubernetes-basics.md  mlops-overview.md  model-registry.md  model-serving.md  pricing-plans.md  rag-architecture.md  security.md  text-chunking.md  vector-databases.md
data/embeddings/: embeddings.json
data/eval/: eval_set.csv
data/train/: train.csv
infra/: init.sql  kind-config.yaml
python/eval-retriever/: README.md  justfile  pyproject.toml
python/eval-retriever/eval_retriever/: __init__.py  app.py  main.py  metrics.py  retriever_client.py
python/eval-retriever/tests/: __init__.py  test_app.py  test_eval_loader.py  test_metrics.py
python/lib-embedding/: justfile  pyproject.toml
python/lib-embedding/lib_embedding/: __init__.py  app.py  embedding.py  main.py  settings.py  task_inputs.py
python/lib-embedding/tests/: __init__.py  test_app.py  test_embedding.py  test_init.py  test_settings.py
python/lib-orm/: justfile  pyproject.toml
python/lib-orm/lib_orm/: __init__.py  app.py  db.py  main.py  models.py  settings.py  task_inputs.py
python/lib-orm/tests/: __init__.py  test_app.py  test_db.py  test_init.py  test_models.py  test_settings.py
python/lib-schemas/: justfile  pyproject.toml
python/lib-schemas/lib_schemas/: __init__.py  app.py  main.py  schemas.py  task_inputs.py
python/lib-schemas/tests/: __init__.py  test_schemas.py
python/package-1/: README.md  justfile  pyproject.toml
python/package-1/package_1/: __init__.py  app.py  main.py  task_inputs.py
python/package-1/tests/: __init__.py  test_main.py
python/rag-embedder/: Dockerfile  justfile  pyproject.toml
python/rag-embedder/rag_embedder/: __init__.py  app.py  main.py  task_inputs.py  writer.py
python/rag-embedder/tests/: __init__.py  test_app.py  test_init.py  test_task_inputs.py  test_writer.py
python/rag-loader/: Dockerfile  justfile  pyproject.toml
python/rag-loader/rag_loader/: app.py  chunker.py  main.py  task_inputs.py
python/rag-loader/tests/: __init__.py  test_app.py  test_chunker.py  test_init.py  test_task_inputs.py
python/rag-pipeline/: justfile  pyproject.toml  rag-ingestion-pipeline.yaml
python/rag-pipeline/rag_pipeline/: __init__.py  app.py  main.py  pipeline.py  task_inputs.py
python/rag-pipeline/rag_pipeline/components/: __init__.py  embedder.py  loader.py
python/rag-pipeline/tests/: test_app.py  test_components.py  test_pipeline.py  test_task_inputs.py
python/rag-retriever/: Dockerfile  justfile  pyproject.toml
python/rag-retriever/rag_retriever/: __init__.py  api.py  app.py  dependencies.py  main.py  task_inputs.py
python/rag-retriever/rag_retriever/routes/: __init__.py  documents.py  health.py  search.py
python/rag-retriever/tests/: __init__.py  test_app.py  test_dependencies.py  test_documents.py  test_health.py  test_search.py  test_task_inputs.py
python/rag-shared/: .coverage  justfile  pyproject.toml
python/rag-shared/rag_shared/: __init__.py  app.py  main.py  settings.py  task_inputs.py
python/rag-shared/tests/: test_db.py  test_embedding.py  test_init.py  test_models.py  test_settings.py
python/rag-viz/: justfile  pyproject.toml
python/rag-viz/rag_viz/: __init__.py  app.py  main.py  task_inputs.py
python/rag-viz/tests/: __init__.py  test_app.py
python/students/eval-retriever/: README.md  STUDENT_GUIDE.md  justfile  pyproject.toml
python/students/eval-retriever/eval_retriever/: app.py  eval_loader.py  metrics.py  task_inputs.py
python/students/eval-retriever/tests/: test_init.py  test_retriever_client.py
python/students/rag-loader/: README.md  justfile  pyproject.toml
python/students/rag-loader/rag_loader/: __init__.py  app.py  reader.py  task_inputs.py
python/students/rag-loader/tests/: __init__.py  test_app.py  test_reader.py  test_task_inputs.py
scripts/: create-starter-repo.sh
specs/: PRD.md  api.md  architecture.md  database.md  decisions.md  embedding-model.md  epics.md  infrastructure.md  packages.md
tests/: __init__.py
tests/e2e/: test_full_pipeline.py
