# Python Package Configuration

[project]
name = "rag-retriever"
version = "0.1.0"
description = "FastAPI retrieval service for RAG system with pgvector search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.0.0",
    "lib-embedding",
    "lib-orm",
    "lib-schemas",
]

[project.scripts]
main = "rag_retriever.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",  # pydocstyle
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false

[tool.uv]
package = true

[tool.uv.sources]
lib-embedding = { path = "../lib-embedding", editable = true }
lib-orm = { path = "../lib-orm", editable = true }
lib-schemas = { path = "../lib-schemas", editable = true }

[tool.setuptools]
packages = ["rag_retriever"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=rag_retriever",
]

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
